# jira_cli

./: .gitignore  Cargo.toml  README.md  deny.toml  test_project_destroy.exp  tests.sh
.github/workflows/: ci.yml  freebsd.yml  release.yml  security_audit.yml  security_audit_cron.yml  security_audit_push.yml
src/: check_version.rs  cli.rs  group.rs  issue.rs  labels.rs  lib.rs  license.rs  main.rs  project.rs  urls.rs  user.rs
src/cli/: check_version.rs  group.rs  issue.rs  labels.rs  license.rs  mod.rs  project.rs  user.rs
src/cli/group/: cli_logic.rs
src/cli/issue/: cli_commands.rs  cli_logic.rs
src/cli/project/: cli_commands.rs  cli_logic.rs
src/cli/user/: cli_logic.rs
src/group/: cli_commands.rs  cli_logic.rs  functions.rs
src/issue/: cli_commands.rs  cli_logic.rs  functions.rs
src/project/: cli_commands.rs  cli_logic.rs  functions.rs
src/user/: cli_commands.rs  cli_logic.rs  functions.rs
