[package]
name = "jira_cli"
version = "2.15.0"
edition = "2021"
license = "GPL-2.0"
readme = "README.md"
rust-version = "1.59"
description = "A little CLI for Jira"
authors = ["sycured <60801403+sycured@users.noreply.github.com>"]
repository = "https://github.com/sycured/jira_cli"
keywords = ["jira"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dev]
opt-level = 3
lto = false
debug = 1

[package.metadata.cargo-udeps.ignore]
normal = ["tikv-jemallocator-global"]

[dependencies]
attohttpc = { version = "0.26.1", default-features = false, features = ["compress", "json", "rustls"] }
base64 = "0.21.5"
clap = { version = "4.4.12", features = ["cargo", "env", "wrap_help"] }
clap_complete = "4.4.6"
comfy-table = "7.1.0"
dialoguer = "0.11.0"
pretty_env_logger = "0.5.0"
human-panic = "1.2.2"
itertools = "0.12.0"
log = "0.4.20"
tikv-jemallocator-global = "0.5.0"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.8.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.109"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }

[dev-dependencies]
clap = { version = "4.4.12", features = ["cargo", "deprecated", "env", "wrap_help"] }
