[package]
name = "jira_cli"
version = "2.15.1"
edition = "2021"
license = "GPL-2.0"
readme = "README.md"
rust-version = "1.78"
description = "A little CLI for Jira"
authors = ["sycured <60801403+sycured@users.noreply.github.com>"]
repository = "https://github.com/sycured/jira_cli"
keywords = ["jira"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dev]
opt-level = 3
lto = false
debug = 1

[package.metadata.cargo-udeps.ignore]
normal = ["tikv-jemallocator-global"]

[dependencies]
attohttpc = { version = "0.28.0", default-features = false, features = ["compress", "json", "rustls"] }
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["cargo", "env", "wrap_help"] }
clap_complete = "4.5.2"
comfy-table = "7.1.1"
dialoguer = "0.11.0"
pretty_env_logger = "0.5.0"
human-panic = "2.0.0"
itertools = "0.13.0"
log = "0.4.21"
tikv-jemallocator-global = "0.5.0"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.10.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }

[dev-dependencies]
clap = { version = "4.5.4", features = ["cargo", "deprecated", "env", "wrap_help"] }
